Bug #10423
bridge: cast between incompatible function types
Start date:
2019-02-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Description
Build error with gcc 8:
../../common/io/bridge.c:223:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())dld_wput, /* qi_putp */ ^ ../../common/io/bridge.c:224:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())dld_wsrv, /* qi_srvp */ ^ ../../common/io/bridge.c:3472:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())bridge_wput, /* qi_putp */ ^ cc1: all warnings being treated as errors
History
Updated by Electric Monk 10 months ago
- % Done changed from 90 to 100
- Status changed from In Progress to Closed
git commit f1ccfd86d00d3a46fa8dc85b88860e10a3ad1019
commit f1ccfd86d00d3a46fa8dc85b88860e10a3ad1019 Author: Toomas Soome <tsoome@me.com> Date: 2019-02-20T22:35:19.000Z 10423 bridge: cast between incompatible function types Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@joyent.com>